フロントエンドの必須ファイルを追加（index.html、logo、favicon、manifest.json）

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
     <title>サウナ施設分析ダッシュボード</title>
   </head>
   <body>
-    <noscript>このアプリを実行するにはJavaScriptを有効にしてください。</noscript>
+    <noscript>このアプリケーションを実行するにはJavaScriptを有効にしてください。</noscript>
     <div id="root"></div>
   </body>
 </html>
