--- a/static/index.html
+++ b/static/index.html
@@ -1,58 +1,37 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>サウナ施設分析ダッシュボード</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="/">
+    <title>サウナ分析ダッシュボード</title>
+    <link rel="manifest" href="/manifest.json" crossorigin="use-credentials">
+    <link rel="icon" href="/favicon.ico">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <style>
-        body {
-            font-family: 'Helvetica Neue', Arial, sans-serif;
-            background-color: #f5f5f5;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            color: #333;
-        }
-        .container {
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            padding: 2rem;
-            max-width: 600px;
-            text-align: center;
-        }
-        h1 {
-            color: #3498db;
-            margin-top: 0;
-        }
-        p {
-            line-height: 1.6;
-            margin-bottom: 1.5rem;
-        }
-        .button {
-            background-color: #3498db;
-            color: white;
-            padding: 10px 20px;
-            border-radius: 4px;
-            text-decoration: none;
-            display: inline-block;
-            font-weight: bold;
-            transition: background-color 0.3s ease;
-        }
-        .button:hover {
-            background-color: #2980b9;
-        }
+        body { font-family: sans-serif; margin: 0; padding: 0; }
+        #root { min-height: 100vh; display: flex; flex-direction: column; }
+        .loading { display: flex; align-items: center; justify-content: center; height: 100vh; }
+        .error { color: red; margin: 20px; padding: 10px; border: 1px solid red; }
     </style>
 </head>
 <body>
-    <div class="container">
-        <h1>サウナ施設分析ダッシュボード</h1>
-        <p>データに基づく施設運営の最適化へようこそ。</p>
-        <p>このサービスでは、サウナ施設の稼働率データ、会員データ、売上データなどを分析し、経営判断に役立つ情報を提供します。</p>
-        <a href="http://localhost:8001/docs" class="button">APIドキュメントを見る</a>
+    <div id="root">
+        <div class="loading">
+            <p>読み込み中...<br>サウナ分析ダッシュボード</p>
+        </div>
     </div>
+    <script defer src="/static/js/main.2a92ebb1.js"></script>
+    <script>
+        // エラーハンドリング
+        window.addEventListener('error', function(e) {
+            console.error('アプリケーションエラー:', e.message);
+            document.getElementById('root').innerHTML =
+                '<div class="error"><h2>エラーが発生しました</h2><p>' +
+                e.message + '</p><p>再読み込みをお試しください。</p></div>';
+        });
+    </script>
 </body>
 </html>
